--- a/Test/index.html
+++ b/Test/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
-    <head>
+<html class="nojs html css_verticalspacer" lang="en-GB">
+<head>
         <meta charset="utf-8">
         <title>GlslCanvas</title>
 
-        <script type="text/javascript" src="dist/GlslCanvas.js"></script>
+        <script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="dist/GlslCanvas.js"></script>
         <script type="text/javascript" src="https://cdn.rawgit.com/github/fetch/master/fetch.js"></script>
 
         <style>
@@ -17,7 +17,7 @@
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%,-50%);
-            }​
+            }&#8203;
 
             .blank {
 
@@ -55,8 +55,8 @@
         </style>
 
     </head>
-    <body>
-        <canvas id="glslCanvas" data-fragment="
+ <body>
+ <canvas id="glslCanvas" data-fragment="
 // Author: Patricio Gonzalez Vivo
 #ifdef GL_ES
 precision mediump float;
@@ -145,15 +145,10 @@ void main(){
 
     gl_FragColor = vec4(color, 1.0);
 }
-" width="800" height="600" data-textures="data/moon.jpg"></canvas>
+" width="1177" height="942" data-textures="data/moon.jpg" style="background-color: rgba(1, 1, 1, 0); width: 100%; height: 100%;"></canvas>
+</body>
+<script>
 
-        <div id="credits">
-            <p class="label" id="title"></p>
-            <p class="label" id="author"></p>
-        </div>
-    </body>
-
-    <script>
         var canvas = document.getElementById("glslCanvas");
         var sandbox = new GlslCanvas(canvas);
         var texCounter = 0;
@@ -265,13 +260,5 @@ void main(){
                 }
             }
         }
-    </script>
-    <script>
-        (function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,"script","//www.google-analytics.com/analytics.js","ga");
-        ga("create", "UA-18824436-2", "auto");
-        ga("send", "pageview");
     </script>
 </html>
