--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
+            <meta charset="utf-8">
+        <meta http-equiv="Cache-Control" content="no-cache">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="mobile-web-app-capable" content="yes">
+
     <title>GlslCanvas</title>
     <script type="text/javascript" src="dist/GlslCanvas.js"></script>
     <style>
