--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Hello World program in GLSL</title>
   <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" content="height=device-height initial-scale=1"/>
   <link href="hello-glsl.css" rel="stylesheet" type="text/css"/>
   <script src="hello-glsl.js" type="text/javascript"> </script>
 </head>
