--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Hello World program in GLSL</title>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1" content="height=device-height initial-scale=1"/>
-  <link href="hello-glsl.css" rel="stylesheet" type="text/css"/>
-  <script src="hello-glsl.js" type="text/javascript"> </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+
+    <title>ThreeJS Shader Experiment 1 - Step 0</title>
+    <style>
+        html,
+        body {
+            height: 100%;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+    </style>
 </head>
 <body>
-  <p>Hello World! Hello GLSL!</p>
-  <canvas>Your browser does not seem to support 
-    HTML5 canvas.</canvas>
-  <script type="x-shader/x-vertex" id="vertex-shader">
-#version 100
-void main() {
-  gl_Position = vec4(0.0, 0.0, 0.0, 1.0) ;
-  gl_PointSize = 64.0;
-}
-  </script>
-  <script type="x-shader/x-fragment" id="fragment-shader">
-#version 100
-void main() {
-  gl_FragColor = vec4(0.18, 0.54, 0.34, 1.0);
-}
-  </script>
-  
+    <script src="js/three.min.js"></script>
+    <script src="js/OrbitControls.js"></script>
+    <script src="js/CopyShader.js"></script>
+    <script src="js/EffectComposer.js"></script>
+    <script src="js/ShaderPass.js"></script>
+    <script src="js/RenderPass.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
