--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
-<canvas id="canvas"></canvas>
-<!--
-for most samples webgl-utils only provides shader compiling/linking and
-canvas resizing because why clutter the examples with code that's the same in every sample.
-See https://webglfundamentals.org/webgl/lessons/webgl-boilerplate.html
-and https://webglfundamentals.org/webgl/lessons/webgl-resizing-the-canvas.html
-for webgl-utils, m3, m4, and webgl-lessons-ui.
--->
-<script src="https://webgl2fundamentals.org/webgl/resources/webgl-utils.js"></script>
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - ShaderToy Buffers to Three.js RenderTarget</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
+
+<!-- partial -->
+
+<script src="js/three.min.js"></script>
+  <script  src="./script.js"></script>
+
+</body>
+</html>
