--- a/index.html
+++ b/index.html
@@ -1,131 +1,53 @@
-
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<title>three.js webgl - shader [Monjori]</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<link type="text/css" rel="stylesheet" href="main.css">
-	</head>
-	<body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="Cache-Control" content="no-cache">
 
-		<div id="container"></div>
+        <title>test-shader</title>
 
-    <script src="js/three.js"></script>
-    <script src="js/EffectComposer.js"></script>
-    <script src="js/ShaderPass.js"></script>
-    <script src="js/RenderPass.js"></script>
-    <script src="js/CopyShader.js"></script>
-		<script id="vertexShader" type="x-shader/x-vertex">
 
-			varying vec2 vUv;
+        <script type="text/javascript" src="dat.gui.min.js"></script>
+        <style>
+            @font-face {
+                font-family: 'iconfont';
+                src: url('iconfont.ttf') format('truetype');
+            }
 
-			void main()	{
-				vUv = uv;
-				gl_Position = vec4( position, 1.0 );
+            * {
+                user-select: none;
+            }
 
-			}
+            html, body {
+                overflow: hidden;
+                background-color: #000;
+            }
 
-		</script>
+            body {
+                margin: 0;
+                position: fixed;
+                width: 100%;
+                height: 100%;
+            }
 
-		<script id="fragmentShader" type="x-shader/x-fragment">
+            canvas {
+                width: 100%;
+                height: 100%;
+            }
 
-			varying vec2 vUv;
-      uniform vec2 mouse;
-      uniform vec2 resolution;
-			uniform float time;
-
-			void main()	{
-        vec2 uv =  vUv;
-        vec2 fac = vec2(resolution.x/resolution.y,1.);
-        uv *= fac;
-				float a = time ;
-				float d, e, f, g = 1.0 / 40.0 ,h ,i ,r ,q;
-				float d1 = smoothstep(0.05,0.04,distance(mouse*fac,uv));
-				gl_FragColor = vec4( d1 );
-			}
-
-		</script>
-
-		<script type="module">
+        </style>
+        <script>
+            window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+            ga('create', 'UA-105392568-1', 'auto');
+            ga('send', 'pageview');
+        </script>
+        <script async src="https://www.google-analytics.com/analytics.js"></script>
+    </head>
+    <body>
+        <canvas></canvas>
 
 
 
-			let camera, scene, renderer;
-
-			let uniforms;
-
-			init();
-			animate();
-
-			function init() {
-
-				const container = document.getElementById( 'container' );
-        renderer = new THREE.WebGLRenderer();
-        renderer.setPixelRatio( window.devicePixelRatio );
-        container.appendChild( renderer.domElement );
-
-
-
-				camera = new THREE.OrthographicCamera( - 1, 1, 1, - 1, 0, 1 );
-
-				scene = new THREE.Scene();
-
-				const geometry = new THREE.PlaneGeometry( 2, 2 );
-
-				uniforms = {
-					time: { value: 1.0 },
-          resolution: {type: "v2",value: new THREE.Vector2()},
-          mouse: {type: "v2",value: new THREE.Vector2()}
-				};
-
-				const material = new THREE.ShaderMaterial( {
-
-					uniforms: uniforms,
-					vertexShader: document.getElementById( 'vertexShader' ).textContent,
-					fragmentShader: document.getElementById( 'fragmentShader' ).textContent
-
-				} );
-
-				const mesh = new THREE.Mesh( geometry, material );
-				scene.add( mesh );
-
-        /*var composer = new THREE.EffectComposer(renderer);
-
-        var renderPass = new THREE.RenderPass(scene, camera);
-        composer.addPass(renderPass);*/
-
-
-          onWindowResize();
-
-				window.addEventListener( 'resize', onWindowResize );
-
-			}
-
-			function onWindowResize() {
-
-				renderer.setSize( window.innerWidth, window.innerHeight );
-        uniforms.resolution.value.x = renderer.domElement.width;
-        uniforms.resolution.value.y = renderer.domElement.height;
-			}
-
-			//
-      document.onmousemove = function(e) {
-        uniforms.mouse.value.x = e.pageX / window.innerWidth;
-        uniforms.mouse.value.y = 1.-e.pageY / window.innerHeight;
-      }
-
-			function animate() {
-
-				requestAnimationFrame( animate );
-
-				uniforms[ 'time' ].value = performance.now() / 1000;
-
-				renderer.render( scene, camera );
-        //composer.render();
-			}
-
-		</script>
-
-	</body>
+        <script src="./script.js"></script>
+    </body>
 </html>
